fix: resolve Vercel build issues
- Remove experimental.esmExternals that's not supported by Turbopack
- Disable Turbopack for production builds to avoid compatibility issues
- Simplify Next.js configuration for static export
- Update vercel.json to remove framework specification
- Ensure proper static export generation

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
