fix: add routes-manifest.json generation for Vercel
- Create post-build script to generate missing routes-manifest.json
- Add minimal routes manifest for Vercel compatibility
- Update build script to run post-build step
- Ensure proper static export with required Vercel files

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
   "buildCommand": "npm run build",
   "outputDirectory": "out",
   "installCommand": "npm install",
+  "functions": {
+    "out/**/*.html": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "headers": [
     {
       "source": "/(.*)",
