--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "private": false,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && node scripts/post-build.js",
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
